@@ -1,6 +1,7 @@
 class CreateUsers < ActiveRecord::Migration
   def self.up
-    create_table :users do |t|
+    create_table :users, :id => false do |t|
+      t.integer :id, :limit => 4, :null => false # For limit for testing purposes
       t.string :login, :limit => 12
       t.string :password, :limit => 16
       t.text :biography
